<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <com.lorentzos.flingswipe.SwipeFlingAdapterView
        android:id="@+id/frame"
        android:background="#CDD1D0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rotation_degrees="15.5"
        tools:context=".MyActivity" />

    <!-- Title TextView at the top center -->
    <TextView
        android:id="@+id/explore"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lobster"
        android:text="Mawadda"
        android:textColor="#BE4194"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Filter Button at the top right corner -->
    <ImageButton
        android:id="@+id/filterButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:background="@drawable/menu_background"
        android:contentDescription="@string/filter"
        android:src="@drawable/ic_filter"
        android:onClick="goToFilter"
        android:tint="#000" />




    <!-- Profile Image -->


    <!-- Profile Name -->


    <!-- Action Buttons (cross and heart) -->


    <RelativeLayout
        android:id="@+id/actionButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp">

        <ImageButton
            android:id="@+id/crossButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/ic_background"
            android:contentDescription="@string/dislike"
            android:scaleType="centerInside"
            android:src="@drawable/ic_cross"
            android:tint="#000" />

        <ImageButton
            android:id="@+id/heartButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/ic_background"
            android:contentDescription="@string/like"
            android:scaleType="centerInside"
            android:src="@drawable/ic_heart"
            android:tint="#000" />
    </RelativeLayout>

    <!-- Bottom Menu with curved background -->
    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/menu_background"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home"
            android:onClick="goToHome"
            android:tint="#000000"
            android:contentDescription="@string/home" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_heart"
            android:onClick="goToMatches"
            android:tint="#000000"
            android:contentDescription="@string/like" />

        <ImageButton
            android:id="@+id/messagesButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_messages"
            android:tint="#000000"
            android:onClick="goToChat"
            android:contentDescription="@string/messages" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_profile"
            android:tint="#000000"
            android:onClick="goToSettings"
            android:contentDescription="@string/profile" />
    </LinearLayout>

</RelativeLayout>
