<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_background"
    tools:context=".SettingsActivity">

    <!-- Title Text -->


    <!-- Back button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back_arrow" />







    <!-- Edit button -->
    <TextView
        android:id="@+id/accountSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameAndAge"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="Profile"
        android:textColor="@android:color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        tools:ignore="NotSibling" />



    <!-- Name -->

    <!-- Phone Number -->

    <!-- Date of birth -->

    <!-- Email -->

    <!-- Logout button -->

    <!-- Delete Account button -->
    <TextView
        android:id="@+id/editHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_centerHorizontal="true"
        android:text="Click to Change the Photo"
        android:textColor="@android:color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="NotSibling" />


    <!-- Bottom Menu with curved background -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/accountSettingsTitle"
        android:layout_marginTop="200dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Name"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kasim"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="350dp"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="NotSibling">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Phone Number"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+60"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumber"
        android:layout_marginTop="300dp"
        android:orientation="horizontal"
        android:padding="16dp"
        tools:ignore="NotSibling">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Age"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="27"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="486dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_background"
        android:text="Save"
        android:textColor="@android:color/white"
        tools:ignore="NotSibling"
        android:textSize="20sp"
        android:gravity="center"
        android:minHeight="48dp"
        />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_background"
        android:text="Log Out"
        android:textColor="@android:color/white"
        tools:ignore="NotSibling"
        android:textSize="20sp"
        android:gravity="center"
        android:onClick="logoutUser"
        android:minHeight="48dp"
        />
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="612dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/login_button_background"
        android:text="Delete Account"
        android:textColor="@android:color/black"
        tools:ignore="NotSibling"
        android:textSize="20sp"
        android:gravity="center"
        android:minHeight="48dp"
        />

    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@drawable/menu_background"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            android:onClick="goToHome"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_heart"
            android:contentDescription="@string/like"
            android:onClick="goToMatches"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/messagesButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_messages"
            android:contentDescription="@string/messages"
            android:onClick="goToChat"
            app:tint="#000000" />

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/menu_curve"
            android:scaleType="centerInside"
            android:src="@drawable/ic_profile"
            android:contentDescription="@string/profile"
            android:onClick="goToSettings"
            app:tint="#000000" />
    </LinearLayout>

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_pfp"

        android:layout_marginTop="90dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
